    [fcgi-program:x] section.  See the manual for details.  (Roger Hoover)
    
  - Fixed a bug where the FCGI socket reference count was not getting 
    decremented on spawn error.  (Roger Hoover)

  - Fixed a Python 2.6 deprecation warning on use of the "sha" module.

  - Updated ez_setup.py to one that knows about setuptools 0.6c11.

3.0a7 (2009-05-24)
 
  - We now bundle our own patched version of Medusa contributed by Jason
    Kirtland to allow Supervisor to run on Python 2.6.  This was done 
    because Python 2.6 introduced backwards incompatible changes to 
    asyncore and asynchat in the stdlib.
  
  - The console script ``memmon``, introduced in Supervisor 3.0a4, has
    been moved to Superlance (http://pypi.python.org/pypi/superlance).  
    The Superlance package contains other useful monitoring tools designed
    to run under Supervisor.    

  - Supervisorctl now correctly interprets all of the error codes that can
    be returned when starting a process.  Patch by Francesc Alted.

  - New 'stdout_events_enabled' and 'stderr_events_enabled' config options
    have been added to the '[program:x]', '[fcgi-program:x]', and 
    '[eventlistener:x]' sections.  These enable the emitting of new 
    PROCESS_LOG events for a program.  If unspecified, the default is False.

    If enabled for a subprocess, and data is received from the stdout or
    stderr of the subprocess while not in the special capture mode used by 
    PROCESS_COMMUNICATION, an event will be emitted.

    Event listeners can subscribe to either PROCESS_LOG_STDOUT or 
    PROCESS_LOG_STDERR individually, or PROCESS_LOG for both.

  - Values for subprocess environment variables specified with environment=
    in supervisord.conf can now be optionally quoted, allowing them to 
    contain commas.  Patch by Tim Godfrey.

  - Added a new event type, REMOTE_COMMUNICATION, that is emitted by a new
    RPC method, supervisor.sendRemoteCommEvent().
